--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="“UTF-8”" />
     <link rel="stylesheet" href="tcg.css" />
     <script type="text/javascript" src="tcg.js"></script>
+    <script type="text/javascript" src="sorting.js"></script>
+    <script type="text/javascript" src="display.js"></script>
+    <script type="text/javascript" src="binder.js"></script>
     <title>Card Binder</title>
   </head>
   <body>
