--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
   </head>
   <body>
     <div class="header">
-      <button onclick="fetchAndFillBinder()">Reload</button>
+      <button
+        onclick="localStorage.clear();console.log('cleared storage');fetchAndFillBinder()"
+      >
+        Reload
+      </button>
       | Rows:
       <button onclick="changeGrid('relative', 0, -1);">-</button>
       <input type="text" id="inputRow" />
