--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <script type="text/javascript" src="sorting.js"></script>
     <script type="text/javascript" src="display.js"></script>
     <script type="text/javascript" src="binder.js"></script>
-    <script type="text/javascript" src="tests.js"></script>
+
+    <script type="text/javascript" src="tests_setup.js"></script>
+
+    <script type="text/javascript" src="binder_tests.js"></script>
+    <script type="text/javascript" src="display_tests.js"></script>
+
     <title>Card Binder</title>
   </head>
   <body>
