tcg tests + remove unnecessary param for fillbinder

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="binder.js"></script>
 
     <script type="text/javascript" src="tests_setup.js"></script>
-
+    <script type="text/javascript" src="tcg_tests.js"></script>
     <script type="text/javascript" src="binder_tests.js"></script>
     <script type="text/javascript" src="display_tests.js"></script>
 
@@ -49,7 +49,7 @@
       <button
         onclick="
         createTags();
-        fillBinder(localStorage.getItem('bindername'))"
+        fillBinder()"
       >
         Apply
       </button>
