--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="“UTF-8”" />
     <link rel="stylesheet" href="tcg.css" />
-    <script type="text/javascript" src="tcg.js"></script>
-    <script type="text/javascript" src="sorting.js"></script>
-    <script type="text/javascript" src="display.js"></script>
-    <script type="text/javascript" src="binder.js"></script>
+    <script type="text/javascript" src="js/tcg.js"></script>
+    <script type="text/javascript" src="js/sorting.js"></script>
+    <script type="text/javascript" src="js/display.js"></script>
+    <script type="text/javascript" src="js/binder.js"></script>
 
-    <script type="text/javascript" src="tests_setup.js"></script>
-    <script type="text/javascript" src="tcg_tests.js"></script>
-    <script type="text/javascript" src="binder_tests.js"></script>
-    <script type="text/javascript" src="display_tests.js"></script>
+    <script type="text/javascript" src="js/tests_setup.js"></script>
+    <script type="text/javascript" src="js/tcg_tests.js"></script>
+    <script type="text/javascript" src="js/binder_tests.js"></script>
+    <script type="text/javascript" src="js/display_tests.js"></script>
 
     <title>Card Binder</title>
   </head>
