make 'loading' more prominent and make buttons tacky af

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <title>Card Binder</title>
   </head>
   <body>
+    <span id="status" class="hidestatus"></span>
     <div class="header">
       <!-- Reload -->
       <button
@@ -75,7 +76,6 @@
       <button onclick="resizeCards('absolute', 200);" class="solid">200</button>
       <button onclick="resizeCards('absolute', 300);" class="solid">300</button>
     </div>
-    <div id="status" class="status"></div>
     <div id="content" class="content"></div>
   </body>
 </html>
