--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="“UTF-8”" />
-    <link rel="stylesheet" href="tcg.css" />
-    <script type="text/javascript" src="js/tcg.js"></script>
+    <link rel="stylesheet" href="css.css" />
+    <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript" src="js/sorting.js"></script>
     <script type="text/javascript" src="js/display.js"></script>
     <script type="text/javascript" src="js/binder.js"></script>
