(messy) pull cards function

--- a/catch.html
+++ b/catch.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
   <head>
     <meta charset="“UTF-8”" />
+    <link rel="stylesheet" href="css.css" />
+    <script type="text/javascript" src="js/catch.js"></script>
     <title>Catch card remotely</title>
+    
   </head>
   <body>
-    <form id="form" method="POST" target="_blank">
+    <span id="status" class="hidestatus"></span>
+    <form id="form" method="POST" target="_blank" action="https://script.google.com/macros/s/AKfycbyaRyXFFKd-89QvMiyEg0TSxkuwZJ8Xt90lCFYqYszjTiGvYDn5OgFUBt31ALRsAYzykQ/exec">
       <!-- action= will be set by javascript -->
       <div>
         <label for="filename">File name:</label>
@@ -14,35 +18,13 @@
         </datalist>
       </div>
 
-      <button type="submit">Submit</button>
+      <button type="submit">Catch</button>
     </form>
-
-    <script>
-      const url =
-        'https://script.google.com/macros/s/AKfycbyaRyXFFKd-89QvMiyEg0TSxkuwZJ8Xt90lCFYqYszjTiGvYDn5OgFUBt31ALRsAYzykQ/exec';
-      document.getElementById('form').action = url;
-
-      // Populates the dropdown
-      fetch(url)
-        .then((response) => response.json())
-        .then(({ data }) => {
-          const header = data[0];
-          const index = header.indexOf('file name');
-          const column = data.map((row) => row[index]);
-          column.shift();
-          populateDatalists('filenames', column);
-        })
-        .catch((error) =>
-          console.error('!!!!!!!!', error, header, index, column)
-        );
-
-      const populateDatalists = (id, arr) => {
-        let result = '';
-        for (const item of arr) {
-          result += `<option value="${item}">`;
-        }
-        document.getElementById(id).innerHTML = result;
-      };
-    </script>
+    <hr>
+    <button onclick="console.log('1');lotto(1);">Pull 1</button>
+    <button onclick="console.log('5');lotto(5);">Pull 5</button>
+    <button onclick="console.log('10');lotto(10);">Pull 10</button>
+    <hr>
+    <div id="content"></div>
   </body>
 </html>
