start constants file

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="js/tcg_tests.js"></script>
     <script type="text/javascript" src="js/binder_tests.js"></script>
     <script type="text/javascript" src="js/display_tests.js"></script>
+    <script type="text/javascript" src="js/constants.js"></script>
 
     <title>Card Binder</title>
   </head>
