--- a/catch.html
+++ b/catch.html
@@ -3,6 +3,7 @@
     <meta charset="“UTF-8”" />
     <link rel="stylesheet" href="css.css" />
     <script type="text/javascript" src="js/catch.js"></script>
+    <script type="text/javascript" src="js/constants.js"></script>
     <title>Catch card remotely</title>
     
   </head>
