reduce pulls to just 1

--- a/catch.html
+++ b/catch.html
@@ -22,10 +22,8 @@
       <button type="submit">Catch</button>
     </form>
     <hr>
-    <button onclick="console.log('1');lotto(1);">Pull 1</button>
-    <button onclick="console.log('5');lotto(5);">Pull 5</button>
-    <button onclick="console.log('10');lotto(10);">Pull 10</button>
+    <button onclick="lotto();">Pull!</button>
     <hr>
-    <div id="content"></div>
+    <div id="content" class="content"></div>
   </body>
 </html>
