add clearList function

--- a/catch.html
+++ b/catch.html
@@ -30,14 +30,15 @@
       </span>
       <span class="header-content">
         <button onclick="lotto();">Pull!</button>
+        <button onclick="clearList();">Clear</button>
       </span>
     </div>
 
     <div id="parent">
+      <div id="content" class="content lotto"></div>
       <span class="header-content" id="card-list-div">
         <ol reversed id="card-list"></ol>
       </span>
-      <div id="content" class="content lotto"></div>
     </div>
   </body>
 </html>
