load script execution in iframe instead of new tab

--- a/catch.html
+++ b/catch.html
@@ -9,13 +9,14 @@
     <title>Catch card remotely</title>
   </head>
   <body>
+    <iframe src="_blank" name="_iframe"></iframe>
     <span id="status" class="hidestatus"></span>
     <div class="header catch-header">
       <span class="header-content">
         <form
           id="form"
           method="POST"
-          target="_blank"
+          target="_iframe"
           action="https://script.google.com/macros/s/AKfycbyaRyXFFKd-89QvMiyEg0TSxkuwZJ8Xt90lCFYqYszjTiGvYDn5OgFUBt31ALRsAYzykQ/exec"
         >
           <label for="filename">File name:</label>
