make card name readonly

--- a/catch.html
+++ b/catch.html
@@ -19,14 +19,13 @@
           target="_iframe"
           action="https://script.google.com/macros/s/AKfycbyaRyXFFKd-89QvMiyEg0TSxkuwZJ8Xt90lCFYqYszjTiGvYDn5OgFUBt31ALRsAYzykQ/exec"
         >
-          <label for="filename">File name:</label>
           <input
             type="text"
             id="id-filename"
             name="filename"
             list="filenames"
+            readonly
           />
-          <button type="submit">Catch</button>
         </form>
       </span>
       <span class="header-content">
