link pages to each other

--- a/catch.html
+++ b/catch.html
@@ -12,6 +12,7 @@
     <iframe src="_blank" name="_iframe"></iframe>
     <span id="status" class="hidestatus"></span>
     <div class="header catch-header">
+      <a href="index.html">Binder</a>
       <span class="header-content">
         <form
           id="form"
