--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <div class="header">
       <span class="header-content">
+        <a href="catch.html">Catch</a>
         <button
           onclick="
         localStorage.clear();
