load new binders from storage by default

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
         <button
           onclick="
         storeNewBinder();
-        fetchAndFillBinder();"
+        createTags();
+        fillBinder();"
         >
           Apply
         </button>
