fix refetch button

--- a/index.html
+++ b/index.html
@@ -17,14 +17,7 @@
     <div class="header">
       <span class="header-content">
         <a href="catch.html">Catch</a>
-        <button
-          onclick="
-        localStorage.clear();
-        console.log('cleared storage');
-        fetchAndFillBinder();"
-        >
-          Refetch
-        </button>
+        <button onclick="fetchAndFillBinder();">Refetch</button>
       </span>
 
       <span class="header-content">
