--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="header">
       <span class="header-content">
         <a href="catch.html">Catch</a>
-        <button onclick="fetchAndFillBinder();">Refetch</button>
+        <button onclick="refetch();">Refetch</button>
       </span>
 
       <span class="header-content">
