add clear and catch buttons

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 
     <div class="header">
       <span class="header-content">
-        <a href="catch.html">Catch</a>
+        <a href="catch.html"><button>Catch</button></a>
         <button onclick="fetchAndFillBinder();">Refetch</button>
+        <button onclick="localStorage.clear();">Clear storage</button>
       </span>
 
       <span class="header-content">
