generate html using createElement instead of plaintext

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <button onclick="setAndStoreGrid('relative', -1, 0);">-</button>
           <input type="text" id="inputCol" />
           <button onclick="setAndStoreGrid('relative', 1, 0);">+</button>
-          <button onclick="setGrid()">Apply</button>
+          <button onclick="setAndStoreGrid('relative', 0, 0)">Apply</button>
         </span>
 
         <span class="header-content">
