fix: card size not saved if using input field

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <input type="text" id="inputCardSize" />
           <button onclick="setAndStoreCardSize('relative', 10);">+10</button>
           <button onclick="setAndStoreCardSize('relative', 100);">+100</button>
-          <button onclick="_resizeCards()">Apply</button>
+          <button onclick="setAndStoreCardSize('relative', 0)">Apply</button>
         </span>
 
         <span class="header-content">
