--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
         Binder:
         <select id="selectBinder"></select>
         <button
-          onclick="
-        storeNewBinder();
-        fillBinder();"
+          onclick="selectNewBinder();"
         >
           Apply
         </button>
