--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         Binder:
         <select id="selectBinder"></select>
         <button
-          onclick="selectNewBinder();"
+          onclick="selectNewBinder('fillbinder');"
         >
           Apply
         </button>
