--- a/catch.html
+++ b/catch.html
@@ -39,7 +39,9 @@
     </div>
 
     <div id="parent">
-      <div id="content" class="content lotto"></div>
+      <div id="content" class="content lotto">
+        <img id="winner"/>
+      </div>
       <span class="header-content" id="card-list-div">
         <ol reversed id="card-list"></ol>
       </span>
