tweak the visuals

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div class="header">
       <span class="header-content">
-        <a href="catch.html"><button>Catch</button></a>
+        <a href="catch.html"><button class="link">Catch</button></a>
         <button onclick="fetchAndFillBinder();">Refetch</button>
         <button onclick="localStorage.clear();">Clear storage</button>
       </span>
