--- a/catch.html
+++ b/catch.html
@@ -15,7 +15,11 @@
     <iframe src="about:blank" name="_iframe"></iframe>
     <span id="status" class="hidestatus"></span>
     <div class="header catch-header">
-      <a href="index.html">Binder</a>
+      <span class="header-content">
+        <a href="index.html"><button class="link">Binder</button></a>
+        <button onclick="fetchAndStoreBinders();">Refetch</button>
+        <button onclick="localStorage.clear();">Clear storage</button>
+      </span>
       <span class="header-content">
         <form id="form" method="POST" target="_iframe">
           <input
