bug: multiple pulls weren't being synced to the sheet

--- a/catch.html
+++ b/catch.html
@@ -22,13 +22,7 @@
       </span>
       <span class="header-content">
         <form id="form" method="POST" target="_iframe">
-          <input
-            type="text"
-            id="id-filename"
-            name="filename"
-            list="filenames"
-            readonly
-          />
+          <input type="text" id="id-filename" name="filenames" readonly />
         </form>
       </span>
       <span class="header-content">
