--- a/catch.html
+++ b/catch.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="“UTF-8”" />
+    <meta charset="UTF-8" />
     <link rel="stylesheet" href="css.css" />
     <script type="text/javascript" src="js/catch.js"></script>
     <script type="text/javascript" src="js/constants.js"></script>
@@ -29,7 +29,7 @@
         <button onclick="lotto(1);">Pull!</button>
         <button onclick="lotto(5);">Pull 5!</button>
         <button onclick="lotto(10);">Pull 10!</button>
-        <button onclick="clearList();">Clear</button>
+        <button onclick="clearList();">Clear display</button>
       </span>
       <span class="header-content">
         Binder:
