--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="“UTF-8”" />
+    <meta charset="UTF-8" />
     <link rel="stylesheet" href="css.css" />
     <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript" src="js/sorting.js"></script>
@@ -24,11 +24,7 @@
       <span class="header-content">
         Binder:
         <select id="selectBinder"></select>
-        <button
-          onclick="selectNewBinder('fillbinder');"
-        >
-          Apply
-        </button>
+        <button onclick="selectNewBinder('fillbinder');">Apply</button>
       </span>
 
       <span class="header-content">
